--- a/docs/feui/guide/component/textarea.html
+++ b/docs/feui/guide/component/textarea.html
@@ -546,6 +546,20 @@
       
       
       
+    
+    
+    <li>
+      <a href="/docs/feui/guide/component/keyboard.html" class="sidebar-link new">Keyboard 键盘</a>
+    </li>
+  
+    
+    
+      
+      
+      
+      
+      
+      
         <li><a class='title-16'>反馈组件</a></li>
       
     
@@ -705,7 +719,7 @@
     
     
     <li>
-      <a href="/docs/feui/guide/component/uploader.html" class="sidebar-link new">Uploader 上传</a>
+      <a href="/docs/feui/guide/component/uploader.html" class="sidebar-link">Uploader 上传</a>
     </li>
   
     
@@ -843,9 +857,15 @@
 <td><code>false</code></td>
 <td><code>false</code>,<code>true</code></td>
 </tr>
+<tr>
+<td>-</td>
+<td>-</td>
+<td>-</td>
+<td>-</td>
+<td>-</td>
+</tr>
 </tbody>
 </table>
-<p>| - | - | - | - | - |</p>
 <h3 id="Slots"><a href="#Slots" class="headerlink" title="Slots"></a>Slots</h3><table>
 <thead>
 <tr>
@@ -933,6 +953,8 @@
         
           <span>← <a href="/docs/feui/guide/component/switch.html">Switch 开关</a></span>
         
+        
+          <span style="float: right;"><a href="/docs/feui/guide/component/keyboard.html">Keyboard 键盘</a> →</span>
         
       </div>
     
