--- a/docs/feui/guide/component/uploader.html
+++ b/docs/feui/guide/component/uploader.html
@@ -546,6 +546,20 @@
       
       
       
+    
+    
+    <li>
+      <a href="/docs/feui/guide/component/keyboard.html" class="sidebar-link new">Keyboard 键盘</a>
+    </li>
+  
+    
+    
+      
+      
+      
+      
+      
+      
         <li><a class='title-16'>反馈组件</a></li>
       
     
@@ -705,7 +719,7 @@
     
     
     <li>
-      <a href="/docs/feui/guide/component/uploader.html" class="sidebar-link current new">Uploader 上传</a>
+      <a href="/docs/feui/guide/component/uploader.html" class="sidebar-link current">Uploader 上传</a>
     </li>
   
     
