:baby_bottle:pwdinpt docs

--- a/docs/feui/guide/component/component.html
+++ b/docs/feui/guide/component/component.html
@@ -549,7 +549,21 @@
     
     
     <li>
-      <a href="/docs/feui/guide/component/keyboard.html" class="sidebar-link new">Keyboard 键盘</a>
+      <a href="/docs/feui/guide/component/keyboard.html" class="sidebar-link">Keyboard 键盘</a>
+    </li>
+  
+    
+    
+      
+      
+      
+      
+      
+      
+    
+    
+    <li>
+      <a href="/docs/feui/guide/component/pwdinput.html" class="sidebar-link new">PwdInput 密码输入框</a>
     </li>
   
     
@@ -1002,6 +1016,22 @@
 <td style="text-align:center">文本域</td>
 <td style="text-align:left"><a href="https://feui.gitee.io/docs/feui/guide/component/textarea.html">https://feui.gitee.io/docs/feui/guide/component/textarea.html</a></td>
 <td style="text-align:left"><a href="https://feui.gitee.io/#/textarea">https://feui.gitee.io/#/textarea</a></td>
+<td style="text-align:center">-</td>
+</tr>
+<tr>
+<td style="text-align:center">465</td>
+<td style="text-align:center">Keyboard</td>
+<td style="text-align:center">文本域</td>
+<td style="text-align:left"><a href="https://feui.gitee.io/docs/feui/guide/component/keyboard.html">https://feui.gitee.io/docs/feui/guide/component/keyboard.html</a></td>
+<td style="text-align:left"><a href="https://feui.gitee.io/#/keyboard">https://feui.gitee.io/#/keyboard</a></td>
+<td style="text-align:center">-</td>
+</tr>
+<tr>
+<td style="text-align:center">466</td>
+<td style="text-align:center">Pwdinput</td>
+<td style="text-align:center">文本域</td>
+<td style="text-align:left"><a href="https://feui.gitee.io/docs/feui/guide/component/pwdinput.html">https://feui.gitee.io/docs/feui/guide/component/pwdinput.html</a></td>
+<td style="text-align:left"><a href="https://feui.gitee.io/#/pwdinput">https://feui.gitee.io/#/pwdinput</a></td>
 <td style="text-align:center">-</td>
 </tr>
 <tr>
