:baby_bottle: new docs imgpreview

--- a/docs/feui/guide/component/icon.html
+++ b/docs/feui/guide/component/icon.html
@@ -2,7 +2,7 @@
 <!doctype html>
 <html lang="en">
 <head>
-    <title>Icon 图标 — Feui</title>
+    <title>Icons 图标 — Feui</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no"/>
     <link rel="icon" href="/docs/images/favicon.ico" type="image/x-icon">
@@ -225,7 +225,7 @@
     
     
     <li>
-      <a href="/docs/feui/guide/component/icon.html" class="sidebar-link current">Icon 图标</a>
+      <a href="/docs/feui/guide/component/icon.html" class="sidebar-link current">Icons 图标</a>
     </li>
   
     
@@ -563,7 +563,7 @@
     
     
     <li>
-      <a href="/docs/feui/guide/component/pwdinput.html" class="sidebar-link new">PwdInput 密码输入框</a>
+      <a href="/docs/feui/guide/component/pwdinput.html" class="sidebar-link">PwdInput 密码输入框</a>
     </li>
   
     
@@ -741,6 +741,20 @@
       
       
       
+      
+      
+      
+    
+    
+    <li>
+      <a href="/docs/feui/guide/component/imgpreview.html" class="sidebar-link new">ImgPreview 图标</a>
+    </li>
+  
+    
+    
+      
+      
+      
         <li><a class='title-18'>Team</a></li>
       
       
@@ -763,7 +777,7 @@
 <div  id='content' class="content guide with-sidebar icon-guide">
   <div class='content_box'>
     
-      <h1>Icon 图标</h1>
+      <h1>Icons 图标</h1>
     
     <div id='pContent'>
       <p><a href="https://feui.gitee.io/#/icons">Live Demo&gt;&gt;</a></p>
