--- a/docs/feui/guide/component/header.html
+++ b/docs/feui/guide/component/header.html
@@ -225,7 +225,7 @@
     
     
     <li>
-      <a href="/docs/feui/guide/component/icon.html" class="sidebar-link">Icon 图标</a>
+      <a href="/docs/feui/guide/component/icon.html" class="sidebar-link">Icons 图标</a>
     </li>
   
     
@@ -563,7 +563,7 @@
     
     
     <li>
-      <a href="/docs/feui/guide/component/pwdinput.html" class="sidebar-link new">PwdInput 密码输入框</a>
+      <a href="/docs/feui/guide/component/pwdinput.html" class="sidebar-link">PwdInput 密码输入框</a>
     </li>
   
     
@@ -734,6 +734,20 @@
     
     <li>
       <a href="/docs/feui/guide/component/uploader.html" class="sidebar-link">Uploader 上传</a>
+    </li>
+  
+    
+    
+      
+      
+      
+      
+      
+      
+    
+    
+    <li>
+      <a href="/docs/feui/guide/component/imgpreview.html" class="sidebar-link new">ImgPreview 图标</a>
     </li>
   
     
@@ -919,7 +933,7 @@
           <span>← <a href="/docs/feui/guide/component/count.html">Count 累加器</a></span>
         
         
-          <span style="float: right;"><a href="/docs/feui/guide/component/icon.html">Icon 图标</a> →</span>
+          <span style="float: right;"><a href="/docs/feui/guide/component/icon.html">Icons 图标</a> →</span>
         
       </div>
     
