--- a/docs/feui/guide/component/uploader.html
+++ b/docs/feui/guide/component/uploader.html
@@ -225,7 +225,7 @@
     
     
     <li>
-      <a href="/docs/feui/guide/component/icon.html" class="sidebar-link">Icon 图标</a>
+      <a href="/docs/feui/guide/component/icon.html" class="sidebar-link">Icons 图标</a>
     </li>
   
     
@@ -563,7 +563,7 @@
     
     
     <li>
-      <a href="/docs/feui/guide/component/pwdinput.html" class="sidebar-link new">PwdInput 密码输入框</a>
+      <a href="/docs/feui/guide/component/pwdinput.html" class="sidebar-link">PwdInput 密码输入框</a>
     </li>
   
     
@@ -741,6 +741,20 @@
       
       
       
+      
+      
+      
+    
+    
+    <li>
+      <a href="/docs/feui/guide/component/imgpreview.html" class="sidebar-link new">ImgPreview 图标</a>
+    </li>
+  
+    
+    
+      
+      
+      
         <li><a class='title-18'>Team</a></li>
       
       
@@ -904,6 +918,8 @@
         
           <span>← <a href="/docs/feui/guide/component/toast.html">Toast 提示</a></span>
         
+        
+          <span style="float: right;"><a href="/docs/feui/guide/component/imgpreview.html">ImgPreview 图标</a> →</span>
         
       </div>
     
