:baby_bottle: edit imgpreview

--- a/docs/feui/guide/component/imgpreview.html
+++ b/docs/feui/guide/component/imgpreview.html
@@ -2,7 +2,7 @@
 <!doctype html>
 <html lang="en">
 <head>
-    <title>ImgPreview 图标 — Feui</title>
+    <title>ImgPreview 图片预览 — Feui</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no"/>
     <link rel="icon" href="/docs/images/favicon.ico" type="image/x-icon">
@@ -747,7 +747,7 @@
     
     
     <li>
-      <a href="/docs/feui/guide/component/imgpreview.html" class="sidebar-link current new">ImgPreview 图标</a>
+      <a href="/docs/feui/guide/component/imgpreview.html" class="sidebar-link current new">ImgPreview 图片预览</a>
     </li>
   
     
@@ -777,7 +777,7 @@
 <div  id='content' class="content guide with-sidebar imgpreview-guide">
   <div class='content_box'>
     
-      <h1>ImgPreview 图标</h1>
+      <h1>ImgPreview 图片预览</h1>
     
     <div id='pContent'>
       <p><a href="https://feui.gitee.io/#/imgpreview">Live Demo&gt;&gt;</a></p>
