--- a/docs/feui/guide/component/uploader.html
+++ b/docs/feui/guide/component/uploader.html
@@ -747,7 +747,7 @@
     
     
     <li>
-      <a href="/docs/feui/guide/component/imgpreview.html" class="sidebar-link new">ImgPreview 图标</a>
+      <a href="/docs/feui/guide/component/imgpreview.html" class="sidebar-link new">ImgPreview 图片预览</a>
     </li>
   
     
@@ -919,7 +919,7 @@
           <span>← <a href="/docs/feui/guide/component/toast.html">Toast 提示</a></span>
         
         
-          <span style="float: right;"><a href="/docs/feui/guide/component/imgpreview.html">ImgPreview 图标</a> →</span>
+          <span style="float: right;"><a href="/docs/feui/guide/component/imgpreview.html">ImgPreview 图片预览</a> →</span>
         
       </div>
     
