--- a/docs/feui/guide/component/component.html
+++ b/docs/feui/guide/component/component.html
@@ -747,7 +747,7 @@
     
     
     <li>
-      <a href="/docs/feui/guide/component/imgpreview.html" class="sidebar-link new">ImgPreview 图标</a>
+      <a href="/docs/feui/guide/component/imgpreview.html" class="sidebar-link new">ImgPreview 图片预览</a>
     </li>
   
     
@@ -1166,6 +1166,14 @@
 <td style="text-align:center">上传</td>
 <td style="text-align:left"><a href="https://feui.gitee.io/docs/feui/guide/component/uploader.html">https://feui.gitee.io/docs/feui/guide/component/uploader.html</a></td>
 <td style="text-align:left"><a href="https://feui.gitee.io/#/uploader">https://feui.gitee.io/#/uploader</a></td>
+<td style="text-align:center">-</td>
+</tr>
+<tr>
+<td style="text-align:center">513</td>
+<td style="text-align:center">ImgPreview</td>
+<td style="text-align:center">图片预览</td>
+<td style="text-align:left"><a href="https://feui.gitee.io/docs/feui/guide/component/imgpreview.html">https://feui.gitee.io/docs/feui/guide/component/imgpreview.html</a></td>
+<td style="text-align:left"><a href="https://feui.gitee.io/#/imgpreview">https://feui.gitee.io/#/imgpreview</a></td>
 <td style="text-align:center">-</td>
 </tr>
 <tr>
