--- a/docs/feui/guide/component/input.html
+++ b/docs/feui/guide/component/input.html
@@ -782,7 +782,7 @@
     <div id='pContent'>
       <p><a href="https://feui.gitee.io/#/input">Live Demo&gt;&gt;</a></p>
 <blockquote>
-<p><code>fe-cell</code> 请在<code>fe-group</code>中使用。<br>如果你想实现在输入框右边按钮切换密码明文，请使用<code>slot=right</code>实现<code>type</code>切换。 </p>
+<p><code>fe-cell</code> 请在<code>fe-group</code>中使用。<br>如果你想实现在输入框右边按钮切换密码明文，请使用<code>slot=right</code>实现<code>type</code>切换。<br><code>vanilla-masker</code>如果找不到请自己安装一下。</p>
 </blockquote>
 <h3 id="使用指南"><a href="#使用指南" class="headerlink" title="使用指南"></a>使用指南</h3><figure class="highlight javascript"><table><tr><td class="code"><pre><div class="line"><span class="keyword">import</span> &#123; Input &#125; <span class="keyword">from</span> <span class="string">'feui'</span>;</div><div class="line"></div><div class="line">components: &#123;</div><div class="line">  [Input.name]: Input</div><div class="line">&#125;</div></pre></td></tr></table></figure>
 <h3 id="代码演示"><a href="#代码演示" class="headerlink" title="代码演示"></a>代码演示</h3><h4 id="基础用法"><a href="#基础用法" class="headerlink" title="基础用法"></a>基础用法</h4><figure class="highlight html"><table><tr><td class="code"><pre><div class="line"><span class="tag">&lt;<span class="name">fe-group</span>&gt;</span></div><div class="line">  <span class="tag">&lt;<span class="name">fe-input</span> <span class="attr">title</span>=<span class="string">'value'</span> <span class="attr">v-model</span>=<span class="string">"value"</span> <span class="attr">placeholder</span>=<span class="string">"我是占位符"</span>&gt;</span><span class="tag">&lt;/<span class="name">fe-input</span>&gt;</span></div><div class="line"><span class="tag">&lt;/<span class="name">fe-group</span>&gt;</span></div></pre></td></tr></table></figure>
