:baby_bottle: edit md

--- a/docs/feui/guide/component/lazyload.html
+++ b/docs/feui/guide/component/lazyload.html
@@ -479,7 +479,7 @@
     
     
     <li>
-      <a href="/docs/feui/guide/component/noticebar.html" class="sidebar-link">NoticeBar 通知栏</a>
+      <a href="/docs/feui/guide/component/noticebar.html" class="sidebar-link">Noticebar 通知栏</a>
     </li>
   
     
@@ -800,7 +800,7 @@
           <span>← <a href="/docs/feui/guide/component/input.html">input 输入框</a></span>
         
         
-          <span style="float: right;"><a href="/docs/feui/guide/component/noticebar.html">NoticeBar 通知栏</a> →</span>
+          <span style="float: right;"><a href="/docs/feui/guide/component/noticebar.html">Noticebar 通知栏</a> →</span>
         
       </div>
     
