--- a/docs/feui/guide/component/pullrefresh.html
+++ b/docs/feui/guide/component/pullrefresh.html
@@ -479,7 +479,7 @@
     
     
     <li>
-      <a href="/docs/feui/guide/component/noticebar.html" class="sidebar-link">NoticeBar 通知栏</a>
+      <a href="/docs/feui/guide/component/noticebar.html" class="sidebar-link">Noticebar 通知栏</a>
     </li>
   
     
@@ -789,7 +789,7 @@
     
       <div class="guide-links">
         
-          <span>← <a href="/docs/feui/guide/component/noticebar.html">NoticeBar 通知栏</a></span>
+          <span>← <a href="/docs/feui/guide/component/noticebar.html">Noticebar 通知栏</a></span>
         
         
           <span style="float: right;"><a href="/docs/feui/guide/component/radio.html">Radio 单选按钮</a> →</span>
