--- a/docs/feui/guide/component/noticebar.html
+++ b/docs/feui/guide/component/noticebar.html
@@ -2,7 +2,7 @@
 <!doctype html>
 <html lang="en">
 <head>
-    <title>NoticeBar 通知栏 — Feui</title>
+    <title>Noticebar 通知栏 — Feui</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no"/>
     <link rel="icon" href="/docs/images/favicon.ico" type="image/x-icon">
@@ -479,7 +479,7 @@
     
     
     <li>
-      <a href="/docs/feui/guide/component/noticebar.html" class="sidebar-link current">NoticeBar 通知栏</a>
+      <a href="/docs/feui/guide/component/noticebar.html" class="sidebar-link current">Noticebar 通知栏</a>
     </li>
   
     
@@ -777,11 +777,11 @@
 <div  id='content' class="content guide with-sidebar noticebar-guide">
   <div class='content_box'>
     
-      <h1>NoticeBar 通知栏</h1>
+      <h1>Noticebar 通知栏</h1>
     
     <div id='pContent'>
       <p><a href="https://feui.gitee.io/#/noticebar">Live Demo&gt;&gt;</a></p>
-<h3 id="使用指南"><a href="#使用指南" class="headerlink" title="使用指南"></a>使用指南</h3><figure class="highlight javascript"><table><tr><td class="code"><pre><div class="line"><span class="keyword">import</span> &#123; NoticeBar &#125; <span class="keyword">from</span> <span class="string">'feui'</span>;</div><div class="line"></div><div class="line">components: &#123;</div><div class="line">  [NoticeBar.name]: NoticeBar</div><div class="line">&#125;</div></pre></td></tr></table></figure>
+<h3 id="使用指南"><a href="#使用指南" class="headerlink" title="使用指南"></a>使用指南</h3><figure class="highlight javascript"><table><tr><td class="code"><pre><div class="line"><span class="keyword">import</span> &#123; Noticebar &#125; <span class="keyword">from</span> <span class="string">'feui'</span>;</div><div class="line"></div><div class="line">components: &#123;</div><div class="line">  [Noticebar.name]: Noticebar</div><div class="line">&#125;</div></pre></td></tr></table></figure>
 <h4 id="基础用法"><a href="#基础用法" class="headerlink" title="基础用法"></a>基础用法</h4><figure class="highlight html"><table><tr><td class="code"><pre><div class="line"><span class="tag">&lt;<span class="name">fe-noticebar</span></span></div><div class="line"><span class="tag">  <span class="attr">text</span>=<span class="string">"学生辗转8千里回家才发现房子被拆，家人竟然忘了告知！哇哈哈哈</span></span></div><div class="line"><span class="tag"><span class="string">  哈哈哈哈哈哈，红红火火哈哈哈哈哈红红火火哈哈！"</span>  </span></div><div class="line"><span class="tag">&gt;</span><span class="tag">&lt;/<span class="name">fe-noticebar</span>&gt;</span></div></pre></td></tr></table></figure>
 <h4 id="添加左边图标"><a href="#添加左边图标" class="headerlink" title="添加左边图标"></a>添加左边图标</h4><figure class="highlight html"><table><tr><td class="code"><pre><div class="line"><span class="tag">&lt;<span class="name">divider</span>&gt;</span>加个小喇叭-图片<span class="tag">&lt;/<span class="name">divider</span>&gt;</span> </div><div class="line"><span class="tag">&lt;<span class="name">fe-noticebar</span></span></div><div class="line"><span class="tag">  <span class="attr">text</span>=<span class="string">"学生辗转8千里回家才发现房子被拆，家人竟然忘了告知！哇哈哈哈哈</span></span></div><div class="line"><span class="tag"><span class="string">  哈哈哈哈哈，红红火火哈哈哈哈哈红红火火哈哈！"</span>  <span class="attr">leftIcon</span>=<span class="string">'notice'</span> </span></div><div class="line"><span class="tag">  <span class="attr">leftImg</span>=<span class="string">"data:image/png;base64,iV...II="</span></span></div><div class="line"><span class="tag">&gt;</span><span class="tag">&lt;/<span class="name">fe-noticebar</span>&gt;</span></div><div class="line"><span class="tag">&lt;<span class="name">divider</span>&gt;</span>加个小喇叭-字体图标<span class="tag">&lt;/<span class="name">divider</span>&gt;</span> </div><div class="line"><span class="tag">&lt;<span class="name">fe-noticebar</span></span></div><div class="line"><span class="tag">  <span class="attr">text</span>=<span class="string">"学生辗转8千里回家才发现房子被拆，家人竟然忘了告知！哇哈哈哈哈哈</span></span></div><div class="line"><span class="tag"><span class="string">  哈哈哈哈，红红火火哈哈哈哈哈红红火火哈哈！"</span>  <span class="attr">leftIcon</span>=<span class="string">'notice'</span> </span></div><div class="line"><span class="tag">&gt;</span><span class="tag">&lt;/<span class="name">fe-noticebar</span>&gt;</span></div></pre></td></tr></table></figure>
 <h4 id="不滚动效果"><a href="#不滚动效果" class="headerlink" title="不滚动效果"></a>不滚动效果</h4><figure class="highlight html"><table><tr><td class="code"><pre><div class="line"><span class="tag">&lt;<span class="name">fe-noticebar</span> <span class="attr">:scrollable</span>=<span class="string">"false"</span>  <span class="attr">text</span>=<span class="string">"学生辗转8千里回家才发现房子被拆，</span></span></div><div class="line"><span class="tag"><span class="string">  家人竟然忘了告知！哇哈哈哈哈哈哈哈哈哈，红红火火哈哈哈哈哈红红火火哈哈！"</span> &gt;</span></div><div class="line"><span class="tag">&lt;/<span class="name">fe-noticebar</span>&gt;</span></div></pre></td></tr></table></figure>
