:baby_bottle: edit swiper md

--- a/docs/feui/guide/component/swiper.html
+++ b/docs/feui/guide/component/swiper.html
@@ -938,6 +938,12 @@
 <td>-</td>
 </tr>
 <tr>
+<td>on-click-list-item</td>
+<td><code></code></td>
+<td>点击单个item触发</td>
+<td>-</td>
+</tr>
+<tr>
 <td>-</td>
 <td>-</td>
 <td>-</td>
